# test_task2

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  restore-postgres.sh  test_task2.dump
configs/: nginx.conf
menu/: admin.py  models.py  urls.py  views.py
menu/migrations/: 0001_initial.py
menu/templatetags/: draw_menu.py
templates/: base.html
templates/menu/: main.html  menu.html  menu_item.html
test_task2/: asgi.py  settings.py  urls.py  wsgi.py
